--- a/src/Styles/Payments.css
+++ b/src/Styles/Payments.css
@@ -1,7 +1,16 @@
-.grid{
+.pay{
     display: grid;
     position: relative;
+    grid-template-rows: 50% 50%;
+    grid-template-columns: repeat(4 25%);
+    grid-row-gap: 0.5rem;
+    grid-column-gap: 0.5rem;
+    width: 100%;
 }
-.grid:hover{
-   border: 1px solid rgba(4, 39, 39, 0.103)
+.item-pay{
+    background-color: springgreen;
+}
+.item-payout{
+grid-row: 1/3;
+grid-column: 4/5;
 }
