--- a/src/Styles/NavBar.css
+++ b/src/Styles/NavBar.css
@@ -1,6 +1,43 @@
-.contenedor {
-   display: flex;
-   grid-row: 2;
-   grid-column: 2;
-   background-color:teal;
+.nav {
+  display: flex;
+  grid-row: 2;
+  height: 8%;
+  margin-left: 6rem;
+  grid-column: 2;
+  background-color: teal;
+  margin-left: 5rem;
+  align-items: center;
+  justify-content: space-between;
  }
+.nav p{
+  margin-left:0.5rem;
+  font-size:1.5rem;
+  color:white;
+  margin-left: 2rem;
+}
+.nav img{
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  object-fit: cover;
+  left: 0;
+ 
+}
+.nav-right{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  height: 92%;
+  width: 25%;
+  justify-content: space-around;
+}
+.nav-right div{
+  display: flex;
+  flex-direction: column;
+  color: white;
+}
+.nav-right h1 {
+ transform: rotate(90deg);
+ font-size: 2rem;
+ color: white;
+}
