--- a/src/Styles/Payments.css
+++ b/src/Styles/Payments.css
@@ -1,16 +1,27 @@
 .pay{
     display: grid;
-    position: relative;
     grid-template-rows: 50% 50%;
-    grid-template-columns: repeat(4 25%);
+    /* grid-template-columns: 23.8%  23.8% 23.8% 26%; */
     grid-row-gap: 0.5rem;
     grid-column-gap: 0.5rem;
-    width: 100%;
+    height: 100%;
 }
 .item-pay{
-    background-color: springgreen;
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.item-pay img {
+    width: 55%;
+    height: 60%;
+    object-fit: contain;
 }
 .item-payout{
 grid-row: 1/3;
 grid-column: 4/5;
+background-color: rgb(65, 65, 65);
+}
+.item-payout h1{
+  color:orange
 }
