--- a/src/Styles/Products.css
+++ b/src/Styles/Products.css
@@ -1,36 +1,61 @@
-.grid{
-    display: grid;
-    position: relative;
-    grid-template-rows: 80% 80%;
-    grid-template-columns: repeat(4, 1fr);
-    grid-row-gap: 0.5rem;
-    grid-column-gap: 0.5rem;
+.grid {
+  display: grid;
+  position: relative;
+  margin: 1rem ;
+  grid-auto-rows: 50% ;
+  grid-template-columns: repeat(4, 1fr);
+  grid-row-gap: 0.5rem;
+  grid-column-gap: 0.5rem;
+  height: 80%;
+  overflow-y: scroll;
 }
 
-.item{
-    background-color: honeydew;
+.item {
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
 }
-.bar{
-    display: flex;
-    flex-direction: row;
+.item img{
+    width: 50%;
+    height: 80%;
+    object-fit: contain;
 }
-.bar ul{
-    display: flex;
-    flex-direction: row;
-    padding: 0;
-    margin: 0;
-    justify-content: space-between;
-    width: 100%;
+.bar {
+  display: flex;
+  flex-direction: row;
+  height: 15%;
+  width: 100%;
+  justify-content: space-evenly;
+  align-items: center;
+  background-color: white;
 }
-.bar li{
+.bar ul {
+  display: flex;
+  flex-direction: row;
+  padding: 0;
+  margin: 0;
+  justify-content: space-between;
+  width: 100%;
+  background: white;
+
+}
+.bar li {
     list-style: none;
-    font-size: 0.3rem;
+    font-size: 2.2vh;
     width: 100%;
-    background-color: honeydew;
-    text-align:center;
+    text-align: center;
     padding: 8px 0px;
+    height: 71%;
+    padding: 1rem 0;
+    z-index: 1;
 }
-.active{
-    border-bottom:2px solid sandybrown;
-
+.bar img {
+  width: 25px;
+}
+.active {
+  border-bottom: 5px solid sandybrown;
 }
